--- a/projeto_inoa.csproj
+++ b/projeto_inoa.csproj
@@ -13,8 +13,9 @@
     </PackageReference>
     <PackageReference Include="Microsoft.EntityFrameworkCore.SQLite" Version="7.0.2" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="7.0.2" />
+    <PackageReference Include="Microsoft.Extensions.DependencyInjection" Version="7.0.0" />
     <PackageReference Include="Microsoft.VisualStudio.Web.CodeGeneration.Design" Version="7.0.3" />
-    <PackageReference Include="Quartz" Version="3.0.6" />
+    <PackageReference Include="Quartz.Extensions.Hosting" Version="3.5.0" />
   </ItemGroup>
 
 </Project>
